k8s/base/user-service-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-canary
  labels:
    app: user-service
    version: canary

spec:
  replicas: 1

  selector:
    matchLabels:
      app: user-service
      version: canary

  template:
    metadata:
      labels:
        app: user-service
        version: canary

    spec:
      containers:
      - name: user-service
        image: devopsdevacr7583.azurecr.io/user-service:600f763   # 👈 NEW VERSION
        imagePullPolicy: Always

        ports:
        - containerPort: 3001

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"

        readinessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: user-service-canary
spec:
  type: ClusterIP
  selector:
    app: user-service
    version: canary
  ports:
  - port: 80
    targetPort: 3001
