k8s/base/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-stable
  labels:
    app: user-service
    version: stable

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: user-service
      version: stable

  template:
    metadata:
      labels:
        app: user-service
        version: stable

    spec:
      containers:
      - name: user-service
        image: devopsdevacr3168.azurecr.io/user-service:v1
        imagePullPolicy: Always

        ports:
        - containerPort: 3001

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"

        livenessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 10
          periodSeconds: 15

        readinessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: ClusterIP

  selector:
    app: user-service
    version: stable

  ports:
  - port: 80
    targetPort: 3001
